Fixed spacing in contextual nav area. Added disclaimer to contextual nav. Added google analytics.

--- a/css/sass/screen.sass
+++ b/css/sass/screen.sass
@@ -33,7 +33,7 @@ body
 		position: relative
 		top: auto
 		left: auto
-		
+
 		#headerbar
 			display: none
 
@@ -49,7 +49,7 @@ body
 
 		nav
 			display: none
-	
+
 
 #whiteout
 	position: fixed
@@ -75,13 +75,18 @@ body
 	h4
 		font-size: 16px
 		font-weight: bold
-		display: inline
+	
+	p
+		margin: 0.5em 0
 
 	ul
 		display: none
 
 	li
 		display: none
+
+#nav-disclaimer
+	margin-top: 1em
 
 #headerbar
 	height: 36px
@@ -140,7 +145,7 @@ body
 		z-index: 2
 		display: block
 
-	.wrap 
+	.wrap
 		position: absolute
 		top: 30px
 		left: 0
@@ -495,7 +500,7 @@ div.page
 			line-height: 19px
 			padding: 0 35px
 			clear: both
-			
+
 		li
 			padding: 0
 			margin: 0 0 3px 14px
@@ -555,7 +560,7 @@ div.page
 			h5
 				font-weight: bold
 				font-size: 15px
-				padding: 8px 15px 5px 58px 
+				padding: 8px 15px 5px 58px
 				color: $burg
 
 			ul
@@ -688,18 +693,4 @@ div.page
 
 	&.title-1.sect-1
 		background: url(../images/overview-bg.png)
-
-
-
-
-	
-
-
-
-
-
-
-
-
-
 
